# QyhsEngine

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  Temp.txt  parser_header.h  stb_truetype.h
engine/:  clangLog.txt  CMakeLists.txt  cmake_install.cmake
engine/asset/level/: test.json  test_backend.json
engine/asset/objects/character/player/: player.object.json  player.object.test.json
engine/asset/objects/environment/fence/: fence.object - 副本.json
engine/asset/objects/environment/floor/: floor.object_without_rigidbody.json
engine/asset/objects/environment/wall/: wall.object.json  wall_with_door.object.json  wall_with_window.object _without_rigidbody.json
engine/asset/world/: hello.world.json
engine/shader/: ShaderInterop_Font.h  axis.frag  axis.vert  axis_frag.spv  axis_vert.spv  combine_ui.frag  combine_ui.vert  combine_ui_frag.spv  combine_ui_vert.spv  common_mesh.frag  common_mesh.vert  common_mesh_frag.spv  common_mesh_vert.spv  compile_shader.bat  fontVS.hlsl  frag.spv  globals.hlsli  imageHF.hlsli  imagePS.hlsl  imageVS.hlsl  mesh_inefficient_axis.frag  mesh_inefficient_axis.vert  mesh_inefficient_axis_frag.spv  mesh_inefficient_axis_vert.spv  objectHF.hlsli  objectPS.hlsl  objectPS_prepass.hlsl  objectVS_prepass.hlsl  object_common_vs.hlsl  shader_interop.h  shader_interop_image.h  shader_interop_renderer.h  skybox.frag  skybox.vert  skybox_frag.spv  skybox_vert.spv  structures.h  trianglePS.hlsl  triangleVS.hlsl  vert.spv  (+1 more)
engine/source/_generated/reflection/: all_reflection.h  animation.reflection.gen.h  animation_clip.reflection.gen.h  animation_component.reflection.gen.h  animation_mask.reflection.gen.h  animation_skeleton_map.reflection.gen.h  camera_component.reflection.gen.h  camera_config.reflection.gen.h  component.reflection.gen.h  global_rendering_resource.reflection.gen.h  hierarchy_component.reflection.gen.h  level_resource.reflection.gen.h  mash_data.reflection.gen.h  material.reflection.gen.h  matrix4.reflection.gen.h  matrix4x4.reflection.gen.h  mesh.reflection.gen.h  mesh_component.reflection.gen.h  motor_component.reflection.gen.h  object.reflection.gen.h  quat.reflection.gen.h  quaternion.reflection.gen.h  skeleton_data.reflection.gen.h  test.reflection.gen.h  transform.reflection.gen.h  transform_component.reflection.gen.h  vector2.reflection.gen.h  vector3.reflection.gen.h  vector4.reflection.gen.h  world_resource.reflection.gen.h
engine/source/_generated/serializater/: all_serializer.h  all_serializer.ipp  level_resource.serializer.gen.h  mesh_component.serializer.gen.h
engine/source/_generated/serializer/: all_serializer.h  all_serializer.ipp  animation.serializer.gen.h  animation_clip.serializer.gen.h  animation_component.serializer.gen.h  animation_mask.serializer.gen.h  animation_skeleton_map.serializer.gen.h  camera_component.serializer.gen.h  camera_config.serializer.gen.h  component.serializer.gen.h  global_rendering_resource.serializer.gen.h  hierarchy_component.serializer.gen.h  level_resource.serializer.gen.h  mash_data.serializer.gen.h  material.serializer.gen.h  matrix4.serializer.gen.h  matrix4x4.serializer.gen.h  mesh.serializer.gen.h  mesh_component.serializer.gen.h  motor_component.serializer.gen.h  object.serializer.gen.h  quat.serializer.gen.h  quaternion.serializer.gen.h  skeleton_data.serializer.gen.h  test.serializer.gen.h  transform.serializer.gen.h  transform_component.serializer.gen.h  vector2.serializer.gen.h  vector3.serializer.gen.h  vector4.serializer.gen.h  world_resource.serializer.gen.h
engine/source/_generator/serializater/: all_serializer.h  all_serializer.ipp  object.serializer.gen.h
engine/source/editor/: CMakeLists.txt  cmake_install.cmake  imgui.ini  test.txt
engine/source/editor/QyhsEditor.dir/Debug/: QyhsEditor.exe.recipe
engine/source/editor/include/: editor.h  editor_axis.cpp  editor_axis.h  editor_global_context.h  editor_input_manager.h  editor_scene_manager.h
engine/source/editor/shaders/: imagePS.cso  imageVS.cso  object_common_vs.cso
engine/source/editor/source/: editor.cpp  editor_axis.cpp  editor_global_context.cpp  editor_input_manager.cpp  editor_scene_manager.cpp  main.cpp
engine/source/meta_parser/:  clangLog.txt  CMakeLists.txt  cmake_install.cmake  main.cpp  utils.cpp  utils.h
engine/source/meta_parser/QyhsParser.dir/Debug/: QyhsParser.exe.recipe
engine/source/meta_parser/cursor/: cursor.cpp  cursor.h  cursor_type.cpp  cursor_type.h
engine/source/meta_parser/generator/: generator.cpp  generator.h  reflection_generator.cpp  reflection_generator.h  serializer_generator.cpp  serializer_generator.h
engine/source/meta_parser/parser/: parser.cpp  parser.h
engine/source/meta_parser/parser/common/: namespace.h  (+2 more)
engine/source/meta_parser/template_manager/: template_manager.cpp  template_manager.h
engine/source/precompile/: precompile.cmake  precompile.json.in
engine/source/runtime/: CMakeLists.txt  cmake_install.cmake  cpp.hint  engine.cpp  engine.h  stdafx.h
engine/source/runtime/Debug/: QyhsRuntime.lib  json11.lib
engine/source/runtime/Release/: json11.lib
engine/source/runtime/application/: application.cpp  application.h
engine/source/runtime/core/: common_include.h  helper.cpp  helper.h  initializer.cpp  initializer.h  jobsystem.cpp  jobsystem.h
engine/source/runtime/resource/: resource_manager.cpp  resource_manager.h
engine/source/runtime/shader/: build_spv_file.bat  shader.frag  shader.vert
engine/source/runtime/utility/: stb_rect_pack.h  stb_truetype.h  utility_common.cpp
engine/template/: allReflectionFile.mustache  allSerializer.ipp.mustache  commonReflectionGenFile.mustache  commonSerializerGenFile.mustache
engine/test/: clang_build_ast.bat  source.cpp  test.h
engine/x64/Debug/QyhsPreCompile/: QyhsPreCompile.recipe
samples/template_windows/: CMakeLIsts.txt  CMakeLists.txt  RCa44192  TemplateWindows.aps  TemplateWindows.rc  main.cpp  pch.h  stdafx.h
samples/template_windows/Debug/: setting_qyhs.cap
samples/template_windows/shaders/: imagePS.cso  imageVS.cso
samples/template_windows/source/: main.cpp
(+308 files in other folders)
