set(TARGET_NAME Template_Windows)

file(GLOB INCLUDE CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h  ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
file(GLOB SOURCE CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB RESOURCE CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/*.rc)
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${INCLUDE} ${SOURCE} ${RESOURCE})

add_executable(${TARGET_NAME} WIN32 ${INCLUDE} ${SOURCE} ${RESOURCE})

add_definitions(-DUNICODE -D_UNICODE)

set_target_properties(${TARGET_NAME} PROPERTIES FOLDER "Samples")

target_link_libraries(${TARGET_NAME} QyhsRuntime)

target_include_directories(${TARGET_NAME}  PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR})